--- a/Rolly-Chair-Racing-League/index.html
+++ b/Rolly-Chair-Racing-League/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
+    <h1>Hi</h1>
   </body>
 </html>
